add Controller All, repair service,impl